# data-integration

./: .gitignore  pyproject.toml
data/: climate_change.csv  climate_change_cleaned.csv  co2.csv  co2_cleaned.csv  country.csv  energy.csv  energy_cleaned.csv
notebooks/: climate_change_extraction.ipynb  co2_extraction.ipynb  country_extraction.ipynb  energy_extraction.ipynb  integration.ipynb
