[project]
name = "data-integration"
version = "0.1.0"
description = ""
authors = [{ name = "ducnm", email = "duc.nm241052m@sis.hust.edu.vn" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "thefuzz (>=0.22.1,<0.23.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
